--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
 <body>
-    <nav class="title">
-        <p>Header Logo</p>
-        <ul class="left">
-            <li><a>link-one</a></li>
-            <li><a>link-one</a></li>
-            <li><a>link-one</a></li>
-        </ul>
-    </nav>
-
-    <main>
         <section class="section-one">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast</p>
-            <button class="signup-btn">Sign Up</button>
+            <nav class="title">
+                <p>Header Logo</p>
+                <ul>
+                    <li><a>link-one</a></li>
+                    <li><a>link-one</a></li>
+                    <li><a>link-one</a></li>
+                </ul>
+            </nav>
+            <div class="sub-s1">
+                <div>
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast</p>
+                    <button class="signup-btn">Sign Up</button>
+                </div>
+                <img src="placeholder.png"/>
+            </div>
         </section>
         <section class="section-two">
             <h1>Some Random Information.</h1>
@@ -56,7 +60,6 @@
                 <button class="signup-btn">Sign Up</button>
             </div>
         </section>
-    </main>
     <footer>Copyright The Oding Project 2021</footer>
 </body>
 </html>
