Style second section
Restructured second section in HTML.
Styled second section.

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
             <h1>Some Random Information.</h1>
             <ul>
                 <li class="item">
-                    <img />
-                    <p></p>
+                    <div class="image"><img src="placeholder.png"/></div>
+                    <p>This is some subtext under an image</p>
                 </li>
                 <li class="item">
-                    <img />
-                    <p></p>
+                    <div class="image"><img src="placeholder.png"/></div>
+                    <p>This is some subtext under an image</p>
                 </li>
                 <li class="item">
-                    <img />
-                    <p></p>
+                    <div class="image"><img src="placeholder.png"/></div>
+                    <p>This is some subtext under an image</p>
                 </li>
                 <li class="item">
-                    <img />
-                    <p></p>
+                    <div class="image"><img src="placeholder.png"/></div>
+                    <p>This is some subtext under an image</p>
                 </li>
             </ul>
         </section>
