--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
                 <button class="signup-btn">Sign Up</button>
             </div>
         </section>
-    <footer>Copyright The Oding Project 2021</footer>
+    <footer>Copyright &#169; The Oding Project 2021</footer>
 </body>
 </html>
