Restyle first section
Replaced placeholder content in the first section with the final styling.
    - Removed <p> element
    - Replaced <button> with <a>
Created a resources folder to hold fonts and images.
Added the Ferrari Sans fonts (Light, Regular, Bold)

--- a/index.html
+++ b/index.html
@@ -9,39 +9,37 @@
 <body>
         <section class="section-one">
             <nav class="title">
-                <p>Header Logo</p>
+                <img src="resources/ferrari-logo-white-smooth.png"/>
                 <ul>
-                    <li><a>link-one</a></li>
-                    <li><a>link-one</a></li>
-                    <li><a>link-one</a></li>
+                    <li><a>Collections</a></li>
+                    <li><a>Drivers</a></li>
+                    <li><a>About Us</a></li>
                 </ul>
             </nav>
             <div class="sub-s1">
                 <div>
-                    <h1>This website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast</p>
-                    <button class="signup-btn">Sign Up</button>
+                    <h1>The most successful team in Formula 1 history</h1>
+                    <a>Read More</a>
                 </div>
-                <img src="placeholder.png"/>
             </div>
         </section>
         <section class="section-two">
             <h1>Some Random Information.</h1>
             <ul>
                 <li class="item">
-                    <div class="image"><img src="placeholder.png"/></div>
+                    <div class="image"><img src="resources/placeholder.png"/></div>
                     <p>This is some subtext under an image</p>
                 </li>
                 <li class="item">
-                    <div class="image"><img src="placeholder.png"/></div>
+                    <div class="image"><img src="resources/placeholder.png"/></div>
                     <p>This is some subtext under an image</p>
                 </li>
                 <li class="item">
-                    <div class="image"><img src="placeholder.png"/></div>
+                    <div class="image"><img src="resources/placeholder.png"/></div>
                     <p>This is some subtext under an image</p>
                 </li>
                 <li class="item">
-                    <div class="image"><img src="placeholder.png"/></div>
+                    <div class="image"><img src="resources/placeholder.png"/></div>
                     <p>This is some subtext under an image</p>
                 </li>
             </ul>
