Restyle second section
Restyled the second section and repurposed it to display clothing collections.
Added transitions to the second section and the navigation bar.
Linked the Collections button in the nav bar to the corresponding section.
Deleted leftover test images from the /resources folder.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Landing Page</title>
+    <title>Scuderia Ferrari HP</title>
 </head>
 <body>
-        <section class="section-one">
+        <section id="section-one">
             <nav class="title">
                 <img src="resources/ferrari-logo-white-smooth.png"/>
                 <ul>
-                    <li><a>Collections</a></li>
+                    <li><a href="#section-two">Collections</a></li>
                     <li><a>Drivers</a></li>
                     <li><a>About Us</a></li>
                 </ul>
@@ -23,28 +23,28 @@
                 </div>
             </div>
         </section>
-        <section class="section-two">
-            <h1>Some Random Information.</h1>
+        <section id="section-two">
+            <h1>Collections</h1>
             <ul>
                 <li class="item">
-                    <div class="image"><img src="resources/placeholder.png"/></div>
-                    <p>This is some subtext under an image</p>
+                    <div class="image"><img src="resources/LH44-hat.png"/></div>
+                    <a>Hats</a>
                 </li>
                 <li class="item">
-                    <div class="image"><img src="resources/placeholder.png"/></div>
-                    <p>This is some subtext under an image</p>
+                    <div class="image"><img src="resources/Ferrari-overwear.png"/></div>
+                    <a>Overwear</a>
                 </li>
                 <li class="item">
-                    <div class="image"><img src="resources/placeholder.png"/></div>
-                    <p>This is some subtext under an image</p>
+                    <div class="image"><img src="resources/Ferrari-shirt.png"/></div>
+                    <a>Shirts</a>
                 </li>
                 <li class="item">
-                    <div class="image"><img src="resources/placeholder.png"/></div>
-                    <p>This is some subtext under an image</p>
+                    <div class="image"><img src="resources/Ferrari-shoes.png"/></div>
+                    <a>Shoes</a>
                 </li>
             </ul>
         </section>
-        <section class="section-three">
+        <section id="section-three">
             <div>
                 <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
                 <p class="author">- Thor, God of Thunder</p></section>
