Restyle third section
Restyled third section and repurposed it to be a drivers' info hub
    - Added both drivers
    - Hid their stats behind a hover over their names

--- a/index.html
+++ b/index.html
@@ -45,10 +45,29 @@
             </ul>
         </section>
         <section id="section-three">
-            <div>
-                <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-                <p class="author">- Thor, God of Thunder</p></section>
+            <div class="LH44">
+                <div class="drivers-text">
+                    <h1>Lewis Hamilton</h1>
+                    <div class="statistics">
+                        <p>Number 44</p>
+                        <p>105 Wins</p>
+                        <p>202 Podiums</p>
+                        <p>7 Championships</p>
+                    </div>
+                </div>
             </div>
+            <div class="CL16">
+                <div class="drivers-text">
+                    <h1>Charles Leclerc</h1>
+                    <div class="statistics">
+                        <p>Number 16</p>
+                        <p>8 Wins</p>
+                        <p>43 Podiums</p>
+                        <p>26 Pole Positions</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section-four">
             <div class="sign-up">
                 <div>
