Finish the project
Restyled the final section (section-four) of the project
Added content to the README.md file
Finalized all features from the project
PS. may be future commits if there are issues with github linkage

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 <img src="resources/ferrari-logo-white-smooth.png"/>
                 <ul>
                     <li><a href="#section-two">Collections</a></li>
-                    <li><a>Drivers</a></li>
-                    <li><a>About Us</a></li>
+                    <li><a href="#section-three">Drivers</a></li>
+                    <li><a href="#section-four">Calendar</a></li>
                 </ul>
             </nav>
             <div class="sub-s1">
@@ -49,10 +49,10 @@
                 <div class="drivers-text">
                     <h1>Lewis Hamilton</h1>
                     <div class="statistics">
-                        <p>Number 44</p>
-                        <p>105 Wins</p>
-                        <p>202 Podiums</p>
-                        <p>7 Championships</p>
+                        <p>Number <b>44</b></p>
+                        <p><b>105</b> Wins</p>
+                        <p><b>202</b> Podiums</p>
+                        <p><b>7</b> Championships</p>
                     </div>
                 </div>
             </div>
@@ -60,21 +60,95 @@
                 <div class="drivers-text">
                     <h1>Charles Leclerc</h1>
                     <div class="statistics">
-                        <p>Number 16</p>
-                        <p>8 Wins</p>
-                        <p>43 Podiums</p>
-                        <p>26 Pole Positions</p>
+                        <p>Number <b>16</b></p>
+                        <p><b>8</b> Wins</p>
+                        <p><b>43</b> Podiums</p>
+                        <p><b>26</b> Pole Positions</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="section-four">
-            <div class="sign-up">
-                <div>
-                    <p>Call to action! It's time!</p>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+        <section id="section-four">
+            <div class="calendar">
+                <h2>March</h2>
+            <table>
+                <tr>
+                    <th>Sun</th>
+                    <th>Mon</th>
+                    <th>Tue</th>
+                    <th>Wed</th>
+                    <th>Thu</th>
+                    <th>Fri</th>
+                    <th>Sat</th>
+                </tr>
+                <tr>
+                    <th class="empty"></th>
+                    <th class="empty"></th>
+                    <th class="empty"></th>
+                    <th class="empty"></th>
+                    <th class="empty"></th>
+                    <th class="empty"></th>
+                    <th>1</th>
+                </tr>
+                <tr>
+                    <th>2</th>
+                    <th>3</th>
+                    <th>4</th>
+                    <th>5</th>
+                    <th>6</th>
+                    <th>7</th>
+                    <th>8</th>
+                </tr>
+                <tr>
+                    <th>9</th>
+                    <th>10</th>
+                    <th>11</th>
+                    <th>12</th>
+                    <th>13</th>
+                    <th>14</th>
+                    <th>15</th>
+                </tr>
+                <tr>
+                    <th class="current">AUS</th>
+                    <th>17</th>
+                    <th>18</th>
+                    <th>19</th>
+                    <th>20</th>
+                    <th>21</th>
+                    <th>22</th>
+                </tr>
+                <tr>
+                    <th>CHI</th>
+                    <th>24</th>
+                    <th>25</th>
+                    <th>26</th>
+                    <th>27</th>
+                    <th>28</th>
+                    <th>29</th>
+                </tr>
+                <tr>
+                    <th>30</th>
+                    <th>31</th>
+                    <th class="empy"></th>
+                    <th class="empy"></th>
+                    <th class="empy"></th>
+                    <th class="empy"></th>
+                    <th class="empy"></th>
+                </tr>
+            </table>
+            </div>
+            <div class="upcoming">
+                <div style="display: flex; flex-direction: column; align-items: center;">
+                    <h2>Upcoming Race:</h2>
+                    <img class="circuit" src="./resources/AUS-circuit.png">
                 </div>
-                <button class="signup-btn">Sign Up</button>
+                    <ul><h4 style="text-align: center;">Australian Grand Prix</h4>
+                        <li><strong>Circuit Name:</strong>   <p>Albert Park Grand Prix Circuit</p></li>
+                        <li><strong>Length:</strong>         <p>306.124 km (190.216 miles)</p></li>
+                        <li><strong>First held:</strong>     <p>1928</p></li>
+                        <li><strong>Last Winner:</strong>    <p>Carlos Sainz</p></li>
+                        <li><strong>Fastest Lap:</strong>    <p>1:19.813 - Charles Leclerc</p></li>
+                    </ul>
             </div>
         </section>
     <footer>Copyright &#169; The Oding Project 2021</footer>
